Fixed dashboard XT and AngularGauge sample #148

--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_xt.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_xt.html
@@ -118,10 +118,9 @@
     function load(){
 
         var components = [
-            // RealTimeLine , RealTimeColumn ,
-            // BubbleChart  , AngularGauge   ,
-            // LineChart    , PieChart2D     ,
-            AngularGauge
+            RealTimeLine , RealTimeColumn ,
+            BubbleChart  , AngularGauge   ,
+            LineChart    , PieChart2D     ,
         ];
         
         Dashboards.init(components);
