Improve the FusionCharts samples

--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_xt.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_xt.html
@@ -45,11 +45,10 @@
     Xpand IT supports Pentaho FusionCharts Plugin.
     <br>
     If you need more information, sharing ideas or discuss plan details, please reach us by email
-    <a href="mailto:marketing@xpand-it.com" target="_top" class="regular">marketing@xpand-it.com</a> or by phone:
-    <span class="regular">+351 218967150</span>
+    <a href="mailto:marketing@xpand-it.com" target="_top" class="regular">pentaho@xpand-it.com</a>
 </div>
 <div class="logos">
-    <img width="388" height="33" src="../../../api/repos/fusion_plugin/static/custom/img/logos-footer.png">
+    <img width="150" height="33" src="../../../api/repos/fusion_plugin/static/custom/img/logo-xpand.png">
 </div>
     
 
