New Component Name

--- a/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_XPFusionChartComponent.html
+++ b/fusion-samples/plugin-samples/fusion-charts/Dashboards/dashboard_XPFusionChartComponent.html
@@ -5,7 +5,7 @@
 <script type='text/javascript' src='../../../content/xfusion/JSClass/themes/fusioncharts.theme.zune.js'></script>
 <script type='text/javascript' src='../../../content/xfusion/JSClass/themes/fusioncharts.theme.carbon.js'></script>
 <script type='text/javascript' src='../../../content/xfusion/JSClass/themes/fusioncharts.theme.fint.js'></script>
-<script type="text/javascript" src="../../repo/files/:public:plugin-samples:fusion-charts:Dashboards:MetaLayerCharts_xt_async_component.js"></script>
+<script type="text/javascript" src="../../repo/files/:public:plugin-samples:fusion-charts:Dashboards:MetaLayerCharts_XPFusionChartComponent.js"></script>
 <script type="text/javascript" src="../../../content/xfusion/js/endpointsForSamples.js"></script>
 <link rel="stylesheet" type="text/css" href="dashboardsStyle.css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
@@ -124,7 +124,7 @@
         htmlObject      : "PieChart3D",
         chartDefinition : MetaLayerCharts.PieChart3D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var Column2D = {
@@ -132,7 +132,7 @@
         htmlObject      : "Column2D",
         chartDefinition : MetaLayerCharts.Column2D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var Marimekko = {
@@ -140,7 +140,7 @@
         htmlObject      : "Marimekko",
         chartDefinition : MetaLayerCharts.Marimekko,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var MSColumn2D = {
@@ -148,7 +148,7 @@
         htmlObject      : "MSColumn2D",
         chartDefinition : MetaLayerCharts.MSColumn2D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var StackedColumn2D = {
@@ -156,7 +156,7 @@
         htmlObject      : "StackedColumn2D",
         chartDefinition : MetaLayerCharts.StackedColumn2D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var MSStackedColumn2D = {
@@ -164,7 +164,7 @@
         htmlObject      : "MSStackedColumn2D",
         chartDefinition : MetaLayerCharts.MSStackedColumn2D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var MSComb2D = {
@@ -172,7 +172,7 @@
         htmlObject      : "MSComb2D",
         chartDefinition : MetaLayerCharts.MSComb2D,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var MSComb2DLinedy = {
@@ -180,7 +180,7 @@
         htmlObject      : "MSComb2DLinedy",
         chartDefinition : MetaLayerCharts.MSComb2DLinedy,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var ScrollChart = {
@@ -188,7 +188,7 @@
         htmlObject      : "ScrollChart",
         chartDefinition : MetaLayerCharts.ScrollChart,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var XYPlotChart = {
@@ -196,7 +196,7 @@
         htmlObject      : "XYPlotChart",
         chartDefinition : MetaLayerCharts.XYPlotChart,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var Angular= {
@@ -204,7 +204,7 @@
         htmlObject     : "Angular",
         chartDefinition : MetaLayerCharts.Angular,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Led= {
@@ -212,7 +212,7 @@
         htmlObject     : "LED",
         chartDefinition : MetaLayerCharts.LED,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var RealTime= {
@@ -220,7 +220,7 @@
         htmlObject     : "RealTime",
         chartDefinition : MetaLayerCharts.RealTime,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Spark= {
@@ -228,7 +228,7 @@
         htmlObject     : "Spark",
         chartDefinition : MetaLayerCharts.Spark,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Bullet= {
@@ -236,7 +236,7 @@
         htmlObject     : "Bullet",
         chartDefinition : MetaLayerCharts.Bullet,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Logarithmic = {
@@ -244,7 +244,7 @@
         htmlObject     : "Logarithmic",
         chartDefinition : MetaLayerCharts.Logarithmic,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Spline = {
@@ -252,7 +252,7 @@
         htmlObject     : "Spline",
         chartDefinition : MetaLayerCharts.Spline,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var ErrorChart = {
@@ -260,7 +260,7 @@
         htmlObject     : "ErrorChart",
         chartDefinition : MetaLayerCharts.ErrorChart,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var InverseY = {
@@ -268,7 +268,7 @@
         htmlObject     : "InverseY",
         chartDefinition : MetaLayerCharts.InverseY,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var DragAble = {
@@ -276,7 +276,7 @@
         htmlObject     : "DragAble",
         chartDefinition : MetaLayerCharts.DragAble,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Radar = {
@@ -284,7 +284,7 @@
         htmlObject     : "Radar",
         chartDefinition : MetaLayerCharts.Radar,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var StepLine = {
@@ -292,7 +292,7 @@
         htmlObject     : "StepLine",
         chartDefinition : MetaLayerCharts.StepLine,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var SelectScatter = {
@@ -300,7 +300,7 @@
         htmlObject     : "SelectScatter",
         chartDefinition : MetaLayerCharts.SelectScatter,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Waterfall = {
@@ -308,7 +308,7 @@
         htmlObject     : "Waterfall",
         chartDefinition : MetaLayerCharts.Waterfall,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Kagi = {
@@ -316,7 +316,7 @@
         htmlObject     : "Kagi",
         chartDefinition : MetaLayerCharts.Kagi,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var DragNode = {
@@ -324,7 +324,7 @@
         htmlObject      : "DragNode",
         chartDefinition : MetaLayerCharts.DragNode,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var Funnel= {
@@ -332,7 +332,7 @@
         htmlObject     : "Other",
         chartDefinition : MetaLayerCharts.Funnel,
         executeAtStart : true,
-        type           : "XDashFusionChartComponentAsync",
+        type           : "XPFusionChartComponent",
     }
 
     var Gantt = {
@@ -340,7 +340,7 @@
         htmlObject      : "Gantt",
         chartDefinition : MetaLayerCharts.Gantt,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
     var Map = {
@@ -348,14 +348,14 @@
         htmlObject      : "Map",
         chartDefinition : MetaLayerCharts.Map,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
     var MapWithMarkers = {
         name            : "MapWithMarkers",
         htmlObject      : "MapWithMarkers",
         chartDefinition : MetaLayerCharts.MapWithMarkers,
         executeAtStart  : true,
-        type            : "XDashFusionChartComponentAsync",
+        type            : "XPFusionChartComponent",
     }
 
         var components = [
